--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,9 @@
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  actor.provider = cluster
+}
 # Properties for akka.kafka.ConsumerSettings can be
 # defined in this section or a configuration section with
   # the same layout.
