--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,16 @@
 akka {
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  actor.provider = cluster
+  //log-config-on-start = on
+  //loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "INFO"
+  //logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  //actor.provider = cluster
+  actor {
+    debug {
+      autoreceive = on
+      lifecycle = on
+      unhandled = on
+    }
+  }
 }
 # Properties for akka.kafka.ConsumerSettings can be
 # defined in this section or a configuration section with
