--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,8 +1,8 @@
 akka {
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  actor.provider = cluster
+  //loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "INFO"
+  //logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  //actor.provider = cluster
 }
 # Properties for akka.kafka.ConsumerSettings can be
 # defined in this section or a configuration section with
