Akka Streams kafka producer and consumer actors are working OK. Not sure if everything is working as it should but subscription is receiving messages

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,12 +10,31 @@ akka {
       lifecycle = on
       unhandled = on
     }
+
+
+    fork-join-executor {
+      # Min number of threads to cap factor-based parallelism number to
+      parallelism-min = 8
+
+      # The parallelism factor is used to determine thread pool size using the
+      # following formula: ceil(available processors * factor). Resulting size
+      # is then bounded by the parallelism-min and parallelism-max values.
+      parallelism-factor = 3.0
+
+      # Max number of threads to cap factor-based parallelism number to
+      parallelism-max = 64
+
+      # Setting to "FIFO" to use queue like peeking mode which "poll" or "LIFO" to use stack
+      # like peeking mode which "pop".
+      task-peeking-mode = "FIFO"
+    }
+
   }
 }
 # Properties for akka.kafka.ConsumerSettings can be
 # defined in this section or a configuration section with
   # the same layout.
-  akka.kafka.consumer {
+akka.kafka.consumer {
   # Tuning property of scheduled polls.
   # Controls the interval from one scheduled poll to the next.
   poll-interval = 50ms
@@ -84,4 +103,30 @@ akka {
   # Interval for checking that transaction was completed before closing the consumer.
   # Used in the transactional flow for exactly-once-semantics processing.
   eos-draining-check-interval = 30ms
+}
+
+# Properties for akka.kafka.ProducerSettings can be
+# defined in this section or a configuration section with
+# the same layout.
+akka.kafka.producer {
+  # Tuning parameter of how many sends that can run in parallel.
+  parallelism = 100
+
+  # Duration to wait for `KafkaConsumer.close` to finish.
+  close-timeout = 60s
+
+  # Fully qualified config path which holds the dispatcher configuration
+  # to be used by the producer stages. Some blocking may occur.
+  # When this value is empty, the dispatcher configured for the stream
+  # will be used.
+  use-dispatcher = "akka.kafka.default-dispatcher"
+
+  # The time interval to commit a transaction when using the `Transactional.sink` or `Transactional.flow`
+  # for exactly-once-semantics processing.
+  eos-commit-interval = 100ms
+
+  # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
+  # can be defined in this configuration section.
+  kafka-clients {
+  }
 }
